# ROS2-and-Jetson-Nano

ldlidar_ros2_ws/src/ldlidar_ros2_ws/: CMakeLists.txt  package.xml
ldlidar_ros2_ws/src/ldlidar_ros2_ws/launch/: ld14.launch.py  viewer_ld14.launch.py
ldlidar_ros2_ws/src/ldlidar_ros2_ws/src/: subscriber_member_function.cpp  subscriber_member_function_orig.cpp
ldlidar_ros2_ws/src/ldlidar_ros2_ws/src/test/: test.cu  test.cuh  test_orig.cu
ros2_dashing/python_nodes/: listener.py  pwm.py
